@@ -1,32 +1,36 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-parcelize'
-
-apply from: "../instance-build.gradle"
-
-def getGitSha = {
-    def stdout = new ByteArrayOutputStream()
-    try {
-        exec {
-            commandLine 'git', 'rev-parse', '--short', 'HEAD'
-            standardOutput = stdout
-        }
-    } catch (Exception e) {
-        return "unknown"
-    }
-    return stdout.toString().trim()
+plugins {
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.google.ksp)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.kapt)
+    alias(libs.plugins.kotlin.parcelize)
 }
 
+apply from: 'getGitSha.gradle'
+
+final def gitSha = ext.getGitSha()
+
+// The app name
+final def APP_NAME = "Tusky"
+// The application id. Must be unique, e.g. based on your domain
+final def APP_ID = "com.keylesspalace.tusky"
+// url of a custom app logo. Recommended size at least 600x600. Keep empty to use the Tusky elephant friend.
+final def CUSTOM_LOGO_URL = ""
+// e.g. mastodon.social. Keep empty to not suggest any instance on the signup screen
+final def CUSTOM_INSTANCE = ""
+// link to your support account. Will be linked on the about page when not empty.
+final def SUPPORT_ACCOUNT_URL = "https://mastodon.social/@Tusky"
+
 android {
-    compileSdkVersion 33
+    compileSdk 33
+    namespace "com.keylesspalace.tusky"
     defaultConfig {
         applicationId APP_ID
         namespace "com.keylesspalace.tusky"
-        minSdkVersion 23
-        targetSdkVersion 33
-        versionCode 98
-        versionName "21.0 beta 1"
+        minSdk 23
+        targetSdk 33
+        versionCode 113
+        versionName "23.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
@@ -35,12 +39,6 @@ android {
         buildConfigField("String", "CUSTOM_LOGO_URL", "\"$CUSTOM_LOGO_URL\"")
         buildConfigField("String", "CUSTOM_INSTANCE", "\"$CUSTOM_INSTANCE\"")
         buildConfigField("String", "SUPPORT_ACCOUNT_URL", "\"$SUPPORT_ACCOUNT_URL\"")
-
-        kapt {
-            arguments {
-                arg("room.schemaLocation", "$projectDir/schemas")
-            }
-        }
     }
     buildTypes {
         release {
@@ -48,23 +46,27 @@ android {
             shrinkResources true
             proguardFiles 'proguard-rules.pro'
         }
-        debug {}
     }
 
-    flavorDimensions "color"
+    flavorDimensions += "color"
     productFlavors {
         blue {}
         green {
             resValue "string", "app_name", APP_NAME + " Test"
             applicationIdSuffix ".test"
-            versionNameSuffix "-" + getGitSha()
+            versionNameSuffix "-" + gitSha
         }
     }
 
-    lintOptions {
-        disable 'MissingTranslation'
+    lint {
+        lintConfig file("lint.xml")
+        // Regenerate by running `./gradlew app:newLintBaseline`
+        baseline = file("lint-baseline.xml")
     }
+
     buildFeatures {
+        buildConfig true
+        resValues true
         viewBinding true
     }
     testOptions {
@@ -74,17 +76,19 @@ android {
         }
         unitTests.all {
             systemProperty 'robolectric.logging.enabled', 'true'
-        }        
+            systemProperty 'robolectric.lazyload', 'ON'
+        }
     }
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
-    packagingOptions {
-        // Exclude unneeded files added by libraries
-        exclude 'LICENSE_OFL'
-        exclude 'LICENSE_UNICODE'
-    }
+    // Exclude unneeded files added by libraries
+    packagingOptions.resources.excludes += [
+            'LICENSE_OFL',
+            'LICENSE_UNICODE',
+    ]
+
     bundle {
         language {
             // bundle all languages in every apk so the dynamic language switching works
@@ -95,6 +99,30 @@ android {
         includeInApk false
         includeInBundle false
     }
+    // Can remove this once https://issuetracker.google.com/issues/260059413 is fixed.
+    // https://kotlinlang.org/docs/gradle-configure-project.html#gradle-java-toolchains-support
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
+            outputFileName = "Tusky_${variant.versionName}_${variant.versionCode}_${gitSha}_" +
+                "${variant.flavorName}_${buildType.name}.apk"
+        }
+    }
+}
+
+ksp {
+    arg("room.schemaLocation", "$projectDir/schemas")
+    arg("room.incremental", "true")
+}
+
+configurations {
+    // JNI-only libraries don't play nicely with Robolectric
+    // see https://github.com/tuskyapp/Tusky/pull/3367
+    testImplementation.exclude group: "org.conscrypt", module: "conscrypt-android"
+    testRuntime.exclude group: "org.conscrypt", module: "conscrypt-android"
 }
 
 // library versions are in PROJECT_ROOT/gradle/libs.versions.toml
@@ -104,7 +132,7 @@ dependencies {
 
     implementation libs.bundles.androidx
     implementation libs.bundles.room
-    kapt libs.androidx.room.compiler
+    ksp libs.androidx.room.compiler
 
     implementation libs.android.material
 
@@ -118,7 +146,7 @@ dependencies {
     implementation libs.conscrypt.android
 
     implementation libs.bundles.glide
-    kapt libs.glide.compiler
+    ksp libs.glide.compiler
 
     implementation libs.bundles.rxjava3
 
@@ -129,14 +157,10 @@ dependencies {
 
     implementation libs.sparkbutton
 
-    implementation libs.photoview
+    implementation libs.touchimageview
 
     implementation libs.bundles.material.drawer
-    implementation libs.material.typeface, {
-        artifact {
-            type = "aar"
-        }
-    }
+    implementation libs.material.typeface
 
     implementation libs.image.cropper
 
@@ -145,6 +169,8 @@ dependencies {
     implementation libs.bouncycastle
     implementation libs.unified.push
 
+    implementation libs.bundles.xmldiff
+
     testImplementation libs.androidx.test.junit
     testImplementation libs.robolectric
     testImplementation libs.bundles.mockito
@@ -152,9 +178,42 @@ dependencies {
     testImplementation libs.androidx.core.testing
     testImplementation libs.kotlinx.coroutines.test
     testImplementation libs.androidx.work.testing
+    testImplementation libs.truth
+    testImplementation libs.turbine
 
     androidTestImplementation libs.espresso.core
     androidTestImplementation libs.androidx.room.testing
     androidTestImplementation libs.androidx.test.junit
+}
 
+// Work around warnings of:
+// WARNING: Illegal reflective access by org.jetbrains.kotlin.kapt3.util.ModuleManipulationUtilsKt (file:/C:/Users/Andi/.gradle/caches/modules-2/files-2.1/org.jetbrains.kotlin/kotlin-annotation-processing-gradle/1.8.22/28dab7e0ee9ce62c03bf97de3543c911dc653700/kotlin-annotation-processing-gradle-1.8.22.jar) to constructor com.sun.tools.javac.util.Context()
+// See https://youtrack.jetbrains.com/issue/KT-30589/Kapt-An-illegal-reflective-access-operation-has-occurred
+tasks.withType(org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask) {
+    kaptProcessJvmArgs.addAll([
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"])
+}
+
+tasks.register("newLintBaseline") {
+    description 'Deletes and then recreates the lint baseline'
+
+    // This task should always run, irrespective of caching
+    notCompatibleWithConfigurationCache("Is always out of date")
+    outputs.upToDateWhen { false }
+
+    doLast {
+        delete android.lint.baseline.path
+    }
+
+    // Regenerate the lint baseline
+    it.finalizedBy tasks.named("lintBlueDebug")
 }
